fixing alignment issue

--- a/src/app/rankings/rankings.component.css
+++ b/src/app/rankings/rankings.component.css
@@ -4,6 +4,7 @@ ul.rankings {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0;
 }
 
 .rank-record-container {
